--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LINGVANEX_TRANSLATE_TOKEN=
+LINGVANEX_TRANSLATE_URI=https://api-b2b.backenster.com/b1/api/v3/
