--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
           password: ${{ secrets.ROOT_PASSWORD }}
           port: 22
           script: cd ${{ vars.PROD_PATH }}
+            && git init
             && su water_andreev
             && git checkout master
             && git reset --hard
