--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
           port: 22
           script: cd ${{ vars.PROD_PATH }}
             && git init
+            && git remote add origin git@github.com:andreev-e/water_ge.git
             && su water_andreev
             && git checkout master
             && git reset --hard
