--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,8 +17,8 @@ jobs:
           password: ${{ secrets.ROOT_PASSWORD }}
           port: 22
           script: cd ${{ vars.PROD_PATH }}
-            && su water_andreev
-            && git checkout main
+            && su ${{ secrets.USER_NAME }}
+            && git checkout master
             && git reset --hard
             && git pull
             && rm composer.lock
