--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,7 @@ jobs:
           password: ${{ secrets.ROOT_PASSWORD }}
           port: 22
           script: cd ${{ vars.PROD_PATH }}
+            && ssh-keygen -f "/root/.ssh/known_hosts" -R github.com
             && su ${{ secrets.USER_NAME }}
             && git reset --hard
             && git pull
