--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           port: 22
           script: cd ${{ vars.PROD_PATH }}
             && su ${{ secrets.USER_NAME }}
-            $$ ssh-keygen -R github.com
+            && ssh-keygen -R github.com
             && git reset --hard
             && git pull
             && rm composer.lock
