--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
             && git reset --hard
             && git pull
             && rm composer.lock
-            && chown ${{ secrets.USER_NAME }}:${{ secrets.USER_NAME }} -R
+            && chown ${{ secrets.USER_NAME }}:${{ secrets.USER_NAME }} . -R
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v0.1.7
         with:
