--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
             && git reset --hard
             && git pull
             && rm composer.lock
+            && cp deploy/queue-worker.conf /etc/supervisor/conf_${{ secrets.USER_NAME }}.d
+            && supervisorctl reread
+            && service supervisor restart
             && chown ${{ secrets.USER_NAME }}:${{ secrets.USER_NAME }} . -R
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v0.1.7
