--- a/deploy/queue-worker.conf
+++ b/deploy/queue-worker.conf
@@ -1,4 +1,4 @@
-[program:laravel-queue]
+[program:water-ge-queue]
 process_name=%(program_name)s_%(process_num)02d
 command=/opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan queue:work --queue=geocode,default
 autostart=true
