--- a/deploy/queue-worker.conf
+++ b/deploy/queue-worker.conf
@@ -1,6 +1,6 @@
 [program:water-ge-queue]
 process_name=%(program_name)s_%(process_num)02d
-command=/opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan queue:work --queue=geocode,default
+command=/opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan queue:work --queue=default
 autostart=true
 autorestart=true
 user=root
