--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,8 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 LINGVANEX_TRANSLATE_TOKEN=
 LINGVANEX_TRANSLATE_URI=https://api-b2b.backenster.com/b1/api/v3/
+
+TELEGRAM_API_TOKEN=
+TELEGRAM_BOT_USERNAME=
+TELEGRAM_API_URL=https://api.telegram.org/
+TELEGRAM_ADMINS=
