--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.8",
         "laravel/tinker": "^2.8",
-        "paquettg/php-html-parser": "^2.1"
+        "paquettg/php-html-parser": "^2.1",
+        "php-telegram-bot/laravel": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
