--- a/composer.json
+++ b/composer.json
@@ -2,17 +2,19 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.8",
-        "laravel/tinker": "^2.8",
-        "paquettg/php-html-parser": "^2.1",
-        "php-telegram-bot/laravel": "^2.0"
+        "guzzlehttp/guzzle": "^7.5.1",
+        "laravel/framework": "^10.9",
+        "laravel/tinker": "^2.8.1",
+        "paquettg/php-html-parser": "^2.1"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
