--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,12 @@
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/php-telegram-bot/laravel.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
