--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "^10.9",
         "laravel/tinker": "^2.8.1",
         "paquettg/php-html-parser": "^2.1",
-        "php-telegram-bot/laravel": "^2.0"
+        "php-telegram-bot/laravel": "^2.1.x-dev"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
@@ -25,12 +25,6 @@
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/php-telegram-bot/laravel.git"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -72,6 +66,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "stable",
-    "prefer-stable": true
+    "minimum-stability": "dev",
+    "prefer-stable": false
 }
