--- a/deploy/queue-worker.conf
+++ b/deploy/queue-worker.conf
@@ -7,3 +7,14 @@ user=root
 numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/www/water_andreev/data/www/water.andreev-e.ru/storage/logs/queue.log
+
+[program:water-ge-queue-schedule]
+process_name=%(program_name)s_%(process_num)02d
+command=/opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan schedule:work
+autostart=true
+autorestart=true
+user=root
+numprocs=1
+redirect_stderr=true
+stdout_logfile=/var/www/water_andreev/data/www/water.andreev-e.ru/storage/logs/schedule.log
+
