--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
             && supervisorctl reread
             && service supervisor restart
             && chown ${{ secrets.USER_NAME }}:${{ secrets.USER_NAME }} . -R
+            && chmod +x artisan
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v0.1.7
         with:
