--- a/deploy/queue-worker.conf
+++ b/deploy/queue-worker.conf
@@ -1,6 +1,6 @@
 [program:water-ge-schedule]
 process_name=%(program_name)s_%(process_num)02d
-command=/opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan schedule:work
+command=cd /var/www/water_andreev/data/www/water.andreev-e.ru/ && /opt/php81/bin/php artisan schedule:work
 autostart=true
 autorestart=true
 user=root
@@ -10,7 +10,7 @@ stdout_logfile=/var/www/water_andreev/data/www/water.andreev-e.ru/storage/logs/s
 
 [program:water-ge-queue]
 process_name=%(program_name)s_%(process_num)02d
-command=cd /var/www/water_andreev/data/www/water.andreev-e.ru/ && /opt/php81/bin/php artisan queue:work --queue=default
+command=/opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan queue:work --queue=default
 autostart=true
 autorestart=true
 user=root
