--- a/deploy/queue-worker.conf
+++ b/deploy/queue-worker.conf
@@ -1,6 +1,6 @@
 [program:water-ge-schedule]
 process_name=%(program_name)s_%(process_num)02d
-command=cd /var/www/water_andreev/data/www/water.andreev-e.ru && /opt/php81/bin/php artisan schedule:work
+command=cd /opt/php81/bin/php /var/www/water_andreev/data/www/water.andreev-e.ru/artisan schedule:work
 autostart=true
 autorestart=true
 user=root
